[gd_scene format=3 uid="uid://level2_main_scene"]

[ext_resource type="PackedScene" uid="uid://level2scene001" path="res://assets/levels/level2.tscn" id="1_level2"]
[ext_resource type="PackedScene" uid="uid://cgtjcig0iej8n" path="res://assets/main_camera.tscn" id="2_wpvyo"]
[ext_resource type="Script" uid="uid://bu8s18bawijbh" path="res://player/cursor_manager.gd" id="3_cursor"]
[ext_resource type="Script" path="res://game_manager.gd" id="4_gamemanager"]
[ext_resource type="PackedScene" uid="uid://win_screen_001" path="res://ui/win_screen.tscn" id="5_winscreen"]
[ext_resource type="PackedScene" uid="uid://lose_screen_001" path="res://ui/lose_screen.tscn" id="6_losescreen"]
[ext_resource type="PackedScene" uid="uid://checkpoint_progress_hud_001" path="res://ui/checkpoint_progress_hud.tscn" id="7_checkpoint_hud"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_qmwpp"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_wpvyo"]
sky_material = SubResource("ProceduralSkyMaterial_qmwpp")

[sub_resource type="Environment" id="Environment_s4q73"]
background_mode = 2
sky = SubResource("Sky_wpvyo")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="Gradient" id="Gradient_s4q73"]
offsets = PackedFloat32Array(0.16225961, 0.16947116, 0.24639423, 0.2560096, 0.84975964, 0.86658657, 0.92908657, 0.9411058)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0.8217887, 0.82178867, 0.82178867, 1, 0.8217887, 0.82178867, 0.82178867, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_uaptj"]
gradient = SubResource("Gradient_s4q73")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.90000004, 0.2)
metadata/_snap_enabled = true

[node name="Game" type="Node3D"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.8660254, -0.43301278, 0.25, 0, 0.49999997, 0.86602545, -0.50000006, 0.75, -0.43301266, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_s4q73")

[node name="World" parent="." instance=ExtResource("1_level2")]

[node name="CameraDrag" type="Node3D" parent="."]

[node name="MainCamera" parent="CameraDrag" instance=ExtResource("2_wpvyo")]
transform = Transform3D(0.87758255, -0.22984886, 0.4207355, 0, 0.87758255, 0.47942555, -0.47942555, -0.4207355, 0.77015114, 0, 15, 15)

[node name="CursorLayer" type="CanvasLayer" parent="."]
layer = 100
script = ExtResource("3_cursor")
cursor_color_normal = Color(0.8784314, 1, 1, 0.68235296)
cursor_color_enemy = Color(1, 0.27450982, 0, 0.91764706)

[node name="CursorSprite" type="Sprite2D" parent="CursorLayer"]
modulate = Color(0.3764706, 1, 1, 0.49803922)
texture = SubResource("GradientTexture2D_uaptj")

[node name="GameManager" type="Node" parent="."]
script = ExtResource("4_gamemanager")
level_scene_path = "res://assets/levels/level2.tscn"
final_checkpoint_id = "checkpoint_4"

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 10

[node name="WinScreen" parent="UILayer" instance=ExtResource("5_winscreen")]
process_mode = 3

[node name="LoseScreen" parent="UILayer" instance=ExtResource("6_losescreen")]
process_mode = 3

[node name="CheckpointProgressHUD" parent="UILayer" instance=ExtResource("7_checkpoint_hud")]
